[package]
name = "age-plugin-remote"
description = "TBD"
version = "0.0.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
# Crypto dependencies
age = { version = "0.7", features = ["armor", "cli-common", "plugin"] }
rand = "0.8"

# General binary dependencies
env_logger = "0.9"
gumdrop = "0.8"
log = "0.4"

[dependencies.tokio]
version = "1.14"
features = ["io-util", "net", "process", "rt", "rt-multi-thread"]
